--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,21 +5,51 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Relaxer Landing Page</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400i,600,800" rel="stylesheet">
 
 	</head>
 	<body>
 		<div id="container">
 			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
+				<div class="header1">Relaxr</div>
+				<div class="header2">Get piece of mind with a single tap</div>
+				<div class="getButton">Get it Now</div>
 			</header>
+			<main>
+				<div class="main-header">Benefits</div>
+				<div class="description-paragraph">
+					<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+				</div>
+				<div class="list-of-abilities">
+					<ul class="list-of-abilities">
+						<li>Schedule meetings for you</li>
+						<li>Excel automation to complete your work for you</li>
+						<li>Responds to emails on your behalf</li>
+						<li>Does all your work for you with our revolutionary AI technology</li>
+					</ul>
+				</div>
+			</main>
 			<footer>
-				&copy; Footer Goes Here
+				<div class="quote">
+					<p>"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work."</p>
+				</div>
+				<div class="quote-author">- Amanda, Intuit </div>
+				<div class="yellow-line">
+					<div class="sign-up-now-button">Sign Up Now!</div>
+				</div>
+				<div class="relaxr-footer">Relaxr</div>
+				<div class="twitter-image">
+					<img src="images/twitter.png" alt="twitter logo">
+				</div>
+				<div class="facebook-image">
+					<img src="images/facebook.png" alt="facebook logo">
+				</div>
+				<div class="copyright">&copy; 2015. Relaxr.</div>
 			</footer>
 		</div><!-- #container -->
 	</body>
